fixed shadows clipping

--- a/styles/main.css
+++ b/styles/main.css
@@ -98,8 +98,7 @@ textarea {
 
 .card:hover {
     transform: scale(1.02);
-    box-shadow: 0px 0px 5px var(--cardShadow);
-    overflow: auto;
+    box-shadow: 0px 6px 5px var(--cardShadow);
 }
 
 .filter__heading {
